--- a/src/Components/ProductDetail/style.css
+++ b/src/Components/ProductDetail/style.css
@@ -5,17 +5,20 @@
         padding-left: 300px;
         
         
+        
     }
     }
     @media screen and (min-width: 320px) and (max-width:550px) {
         .navbar .p-tabview-nav{
             display: flex;
             flex-wrap: wrap;
+        
             gap:30px;
             width:22rem;
-            background-color: green;
+            background-color: rgb(134, 134, 202);
             padding-right:10px;
-            height: 100px;
+            padding-left:5px;
+            height: 140px;
         
 
             
@@ -26,6 +29,8 @@
         display:flex;
         background-color: aqua;
         width:12rem;
+    
+        
         
     }
     
